<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NDN Health</string>
    <string name="action_settings">Settings</string>
    <string name="backBtnText">Back</string>
    <string name="selfBeatText">Record Heartbeat</string>
    <string name="patientDataText">View My Data</string>
    <string name="cliBeatText">View Patients</string>
    <string name="netLinksText">Configure Network Links</string>
    <string name="welcomeText">NDN HealthSensorNet</string>
    <string name="editPatientDataBtnText">Edit Patient Data</string>
    <string name="addNewPatientBtnText">Add New Patient</string>
    <string name="patientDataTitle">Patient Data</string>
    <string name="userCredentialText">Update Credentials</string>
    <string name="userCredentialInfoText">Both fields are necessary in order to facilitate communication.\n\n
User ID should be formatted \"FirstnameLastnameDOB\".\n\nSensor ID should be assigned a four digit number.
    </string>
    <string name="default_text">--</string>

</resources>
