<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/cliBeatText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:id="@+id/patientListView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/addNewPatientBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/addNewPatientBtnText"
        android:layout_gravity="center|bottom" />

    <Button
        android:id="@+id/requestPatientDataBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/requestPatientDataBtnText"
        android:layout_gravity="center|bottom" />

    <Button
        android:id="@+id/getCliBeatBackBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/backBtnText"
        android:layout_gravity="center|bottom" />

</LinearLayout>