<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
    android:id="@+id/titleBar"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:text="@string/userCredentialText"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#000000"
    android:textStyle="bold"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/userCredentialInfoText"
        android:id="@+id/credentialInfo_textView"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="25dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="User ID: "
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/userid_textView" />



        <EditText
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/userid_editText"
            android:gravity="right"
            android:layout_marginLeft="58dp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Sensor ID: "
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/sensorid_textView" />

        <EditText
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/sensorid_editText"
            android:gravity="right"
            android:layout_marginLeft="35dp" />

    </LinearLayout>

    <Button
        android:id="@+id/credentialSaveBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Save"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center|bottom"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/credentialBackBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/backBtnText"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center|bottom"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

</LinearLayout>